Fix text alignment on desktop card summary description

--- a/src/components/Summary/Summary.module.scss
+++ b/src/components/Summary/Summary.module.scss
@@ -1,4 +1,5 @@
 @use "src/styles/colors" as c;
+@use "src/styles/breakpoints" as b;
 
 .box {
   border: 1px solid c.$stroke;
@@ -47,4 +48,8 @@
   background: c.$stroke;
   margin: 0;
   color: c.$gray;
+
+  @include b.desktop {
+    text-align: start;
+  }
 }
